--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,22 +1,235 @@
 /* Header.module.scss */
+@keyframes slideDown {
+	from {
+		transform: translateY(-10%);
+		opacity: 0;
+	}
+	to {
+		transform: translateY(0);
+		opacity: 1;
+	}
+}
+
+@keyframes fadeInOverlay {
+	from {
+		background-color: rgba(0, 0, 0, 0);
+	}
+	to {
+		background-color: rgba(0, 0, 0, 0.5);
+	}
+}
+
+.overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 998;
+	background: rgba(255, 255, 255, 0);
+	-webkit-backdrop-filter: blur(12px);
+	backdrop-filter: blur(12px);
+}
+
 header {
 	position: fixed;
 	top: 0;
 	width: 100%;
-	height: 80px; // или сколько нужно
+	height: 80px;
 	z-index: 1000;
 	border-bottom: 1px solid rgba(128, 128, 128, 0.55);
 	background: rgba(255, 255, 255, 0.05);
 	display: flex;
 	align-items: center;
-	display: flex;
 	justify-content: center;
-	padding-right: 5px;
-	padding-left: 5px;
+	padding: 0 5px;
 	transition: background-color 0.4s ease, backdrop-filter 0.4s ease;
+
 	&.scrolled {
-		background-color: rgba(0, 0, 0, 0.5); // или любой нужный
-		backdrop-filter: blur(12px); // эффект размытия
+		background-color: rgba(0, 0, 0, 0.5);
+		backdrop-filter: blur(12px);
+	}
+
+	&.menuOpenHeader {
+		background: #000f21;
+		border: none;
+		backdrop-filter: none;
+		border-bottom: none;
+	}
+
+	.burgerIcon {
+		position: relative;
+		width: 24px; // подгоните под размер ваших SVG
+		height: 24px;
+		cursor: pointer;
+		transition: transform 0.4s ease;
+
+		/* общие стили для обеих иконок */
+		.iconBurger,
+		.iconClose {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			transition: opacity 0.3s ease;
+		}
+
+		/* по умолчанию показываем бургер, крестик скрыт */
+		.iconBurger {
+			opacity: 1;
+		}
+		.iconClose {
+			opacity: 0;
+		}
+
+		/* при открытом меню — поворачиваем контейнер и меняем прозрачность иконок */
+		&.open {
+			transform: rotate(180deg);
+
+			.iconBurger {
+				opacity: 0;
+			}
+			.iconClose {
+				opacity: 1;
+			}
+		}
+	}
+
+	.burgerIcon {
+		display: none;
+
+		@media only screen and (max-width: 1024px) {
+			display: block;
+		}
+	}
+
+	nav {
+		width: 100%;
+
+		ul {
+			display: flex;
+			justify-content: space-around;
+			a {
+				color: #fff;
+				text-align: center;
+				font-family: Helvetica;
+				font-size: 16px;
+				font-style: normal;
+				font-weight: 400;
+				line-height: normal;
+				letter-spacing: 0.16px;
+				position: relative;
+				display: inline-block;
+				color: #fff;
+				text-decoration: none;
+				padding-bottom: 4px;
+
+				&::after {
+					content: '';
+					position: absolute;
+					left: 0;
+					bottom: -3px;
+					height: 2px;
+					width: 100%;
+					background-color: #0a7cff;
+					transform: scaleX(0);
+					transform-origin: left;
+					transition: transform 0.4s ease;
+					box-shadow: 0 0 10px #0a7cff;
+					border-radius: 24px;
+				}
+
+				&:hover::after {
+					transform: scaleX(1);
+				}
+			}
+		}
+	}
+
+	.mobileMenu {
+		display: none;
+		position: absolute;
+		top: 100%;
+		left: 0;
+		width: 100%;
+		background: #000f21;
+		z-index: 999;
+		padding: 24px;
+
+		transform: translateY(-10%);
+		opacity: 0;
+		animation: slideDown 0.4s ease forwards;
+
+		@media only screen and (max-width: 1024px) {
+			display: block;
+		}
+
+		ul {
+			display: flex;
+			flex-direction: column;
+			gap: 16px;
+			align-items: center;
+		}
+
+		.mobileBtns {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			padding-top: 14px;
+			gap: 14px;
+			.signIn {
+				border-radius: 20px;
+				background: radial-gradient(
+						70.71% 70.71% at 50% 50%,
+						rgba(255, 255, 255, 0.12) 0%,
+						rgba(0, 0, 0, 0) 100%
+					),
+					#0a7cff;
+				box-shadow: 1px 1px 2px 0px rgba(255, 255, 255, 0.24) inset,
+					0px 1px 3px 0px rgba(10, 124, 255, 0.24),
+					0px 2px 6px 0px rgba(10, 124, 255, 0.24),
+					0px 4px 8px 0px rgba(10, 124, 255, 0.12),
+					0px 16px 32px -8px rgba(10, 124, 255, 0.48);
+				width: 100%;
+				max-width: 300px;
+				height: 40px;
+				color: #fff;
+				text-align: center;
+				font-family: Helvetica;
+				font-size: 16px;
+				font-style: normal;
+				font-weight: 400;
+				line-height: 24px; /* 150% */
+			}
+
+			.langSwitcher {
+				color: #fff;
+				text-align: center;
+				font-family: Helvetica;
+				font-size: 15px;
+				font-style: normal;
+				font-weight: 400;
+				line-height: 24px; /* 160% */
+				display: flex;
+				align-items: center;
+				gap: 4px;
+				border-radius: 20px;
+				background: radial-gradient(
+						70.71% 70.71% at 50% 50%,
+						rgba(255, 255, 255, 0.08) 0%,
+						rgba(255, 255, 255, 0) 100%
+					),
+					rgba(255, 255, 255, 0);
+				box-shadow: 0px 8px 40px -20px rgba(255, 255, 255, 0.2),
+					1px 1px 0px 0px rgba(255, 255, 255, 0.08) inset,
+					0px 0px 0px 1px rgba(255, 255, 255, 0.06) inset;
+				width: 100%;
+				height: 40px;
+				max-width: 300px;
+				justify-content: center;
+			}
+		}
 	}
 
 	.headerContent {
@@ -31,6 +244,10 @@ header {
 			gap: 12px;
 			width: 100%;
 			max-width: 232px;
+
+			@media only screen and (max-width: 1024px) {
+				display: none;
+			}
 
 			.signIn {
 				width: 100%;
@@ -96,46 +313,9 @@ header {
 			}
 		}
 
-		nav {
-			width: 100%;
-			ul {
-				display: flex;
-				justify-content: space-around;
-				a {
-					color: #fff;
-					text-align: center;
-					font-family: Helvetica;
-					font-size: 16px;
-					font-style: normal;
-					font-weight: 400;
-					line-height: normal;
-					letter-spacing: 0.16px;
-					position: relative;
-					display: inline-block;
-					color: #fff;
-					text-decoration: none;
-					padding-bottom: 4px;
-
-					&::after {
-						content: '';
-						position: absolute;
-						left: 0;
-						bottom: -3px;
-						height: 2px;
-						width: 100%;
-						background-color: #0A7CFF;
-						transform: scaleX(0);
-						transform-origin: left;
-						transition: transform 0.4s ease;
-						box-shadow: 0 0 10px #0A7CFF; // ✅ мягкий glow
-						border-radius: 24px;
-					}
-
-					&:hover::after {
-						transform: scaleX(1);
-						
-					}
-				}
+		.desktopNav {
+			@media only screen and (max-width: 1024px) {
+				display: none;
 			}
 		}
 	}
