--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -9,6 +9,10 @@ footer {
 	max-width: 1208px;
 	padding: 12px 0px;
 
+	@media only screen and (max-width: 1260px) {
+	margin: 0 12px;
+	}
+
 	.footerTop {
 		nav {
 			display: flex;
