--- a/src/pages/HomeScreen/homeScreen.module.scss
+++ b/src/pages/HomeScreen/homeScreen.module.scss
@@ -105,7 +105,15 @@
 		background-repeat: no-repeat;
 		background-position: center;
 
+		@media only screen and (max-width: 1260px) {
+			margin-right: 12px;
+			margin-left: 12px;
+		}
+
 		.heroTxtWrapper {
+			@media only screen and (max-width: 1150px) {
+				margin-left: 25px;
+			}
 			.heroTxt {
 				padding-bottom: 44px;
 				padding-top: 44px;
@@ -201,6 +209,10 @@
 			justify-content: space-between;
 			overflow: hidden;
 
+			@media only screen and (max-width: 1260px) {
+				margin: 0px 12px;
+			}
+
 			&::before {
 				content: '';
 				position: absolute;
@@ -227,6 +239,7 @@
 			.faqImg {
 				img {
 					max-width: 575px;
+					width: 100%;
 
 					opacity: 0;
 					transform: translateY(40px);
@@ -255,6 +268,9 @@
 		max-width: 1240px;
 
 		.chooseContent {
+			@media only screen and (max-width: 1260px) {
+				margin: 0px 12px;
+			}
 			h2 {
 				color: #d9d9d9;
 				text-align: center;
@@ -368,9 +384,20 @@
 			justify-content: space-between;
 			padding-bottom: 43px;
 
+			@media only screen and (max-width: 1260px) {
+				margin: 0 12px;
+			}
+
+			.imgWrapper{
+				display: flex;
+				align-items: center;
+				justify-content: center;
+			}
+
 			img {
 				max-width: 369px;
 				animation: levitate 3s ease-in-out infinite;
+				width: 100%;
 			}
 
 			.leftContent,
@@ -454,6 +481,10 @@
 			justify-content: space-between;
 			align-items: center;
 
+			@media only screen and (max-width: 1260px) {
+				margin: 0 12px;
+			}
+
 			.earthLeft {
 				max-width: 394px;
 				width: 100%;
@@ -529,6 +560,10 @@
 	.countingWrapper {
 		width: 100%;
 		max-width: 1240px;
+
+		@media only screen and (max-width: 1260px) {
+			margin: 0 12px;
+		}
 		.countingContent {
 			display: flex;
 			align-items: center;
@@ -539,6 +574,7 @@
 			backdrop-filter: blur(2px);
 			border-radius: 24px;
 			padding: 32px 26px;
+			gap: 12px;
 
 			svg {
 				max-height: 101px;
@@ -606,6 +642,10 @@
 	.keyWrapper {
 		width: 100%;
 		max-width: 1240px;
+
+		@media only screen and (max-width: 1260px) {
+		margin: 0 12px;
+		}
 		h2 {
 			color: #fff;
 			font-family: 'TT Hoves Pro Trl Expanded';
@@ -700,6 +740,10 @@
 	.featuresWrapper {
 		width: 100%;
 		max-width: 1240px;
+
+		@media only screen and (max-width: 1260px) {
+		margin: 0 12px;
+		}
 		.featuresContent {
 			display: flex;
 			align-items: center;
