--- a/src/components/FaqList/FaqList.module.scss
+++ b/src/components/FaqList/FaqList.module.scss
@@ -83,6 +83,10 @@
 		overflow: hidden;
 		transition: max-height 0.6s ease;
 		max-width: 520px;
+
+		@media only screen and (max-width: 1024px) {
+		max-width: none;
+		}
 	}
 
 	&.active {
