--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -13,6 +13,10 @@ footer {
 	margin: 0 12px;
 	}
 
+	@media only screen and (max-width: 1024px) {
+	margin: 0 40px;
+	}
+
 	.footerTop {
 		nav {
 			display: flex;
@@ -20,6 +24,15 @@ footer {
 			padding-bottom: 12px;
 			border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 			margin-bottom: 14px;
+
+			@media only screen and (max-width: 1024px) {
+			display: grid;
+			grid-template-columns: auto auto;
+			justify-content: space-between;
+			padding-right: 120px;
+			gap: 16px;
+			border: none;
+			}
 			div {
 				h2 {
 					color: #fff;
@@ -61,6 +74,12 @@ footer {
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
+
+		@media only screen and (max-width: 1024px) {
+		flex-direction: column;
+		align-items: start;
+		gap: 12px;
+		}
 
 		p {
 			color: #fff;
