--- a/src/components/ClientSlider/ClientSlider.module.scss
+++ b/src/components/ClientSlider/ClientSlider.module.scss
@@ -5,6 +5,10 @@
 	/* button */
 	box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
 
+	@media only screen and (max-width: 767px) {
+	padding: 12px;
+	}
+
 	&::before {
 		content: '';
 		position: absolute;
@@ -39,6 +43,10 @@
 		letter-spacing: 0.5px;
 		text-transform: uppercase;
 		max-width: 375px;
+
+		@media only screen and (max-width: 767px) {
+		font-size: 16px;
+		}
 	}
 
 	p {
@@ -51,6 +59,13 @@
 		letter-spacing: -0.48px;
 		max-width: 375px;
 		padding: 8px 0px;
+
+		@media only screen and (max-width: 767px) {
+		font-size: 15px;
+		padding-top: 4px;
+		padding-bottom: 8px;
+		max-width: 316px;
+		}
 	}
 
 	span {
