--- a/src/components/FaqList/FaqList.module.scss
+++ b/src/components/FaqList/FaqList.module.scss
@@ -71,6 +71,10 @@
 		letter-spacing: 0.5px;
 		text-transform: uppercase;
 		transition: font-weight 0.3s ease;
+
+		@media only screen and (max-width: 767px) {
+		font-size: 20px;
+		}
 	}
 
 	.faqText {
@@ -84,8 +88,12 @@
 		transition: max-height 0.6s ease;
 		max-width: 520px;
 
-		@media only screen and (max-width: 1024px) {
+		@media only screen and (max-width: 1023px) {
 		max-width: none;
+		}
+
+		@media only screen and (max-width: 767px) {
+		font-size: 15px;
 		}
 	}
 
