--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -13,8 +13,12 @@ footer {
 	margin: 0 12px;
 	}
 
-	@media only screen and (max-width: 1024px) {
+	@media only screen and (max-width: 1023px) {
 	margin: 0 40px;
+	}
+
+	@media only screen and (max-width: 767px) {
+	margin: 0 18px;
 	}
 
 	.footerTop {
@@ -25,13 +29,17 @@ footer {
 			border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 			margin-bottom: 14px;
 
-			@media only screen and (max-width: 1024px) {
+			@media only screen and (max-width: 1023px) {
 			display: grid;
 			grid-template-columns: auto auto;
 			justify-content: space-between;
 			padding-right: 120px;
 			gap: 16px;
 			border: none;
+			}
+
+			@media only screen and (max-width: 767px) {
+			padding-right: 0;
 			}
 			div {
 				h2 {
@@ -75,10 +83,14 @@ footer {
 		align-items: center;
 		justify-content: space-between;
 
-		@media only screen and (max-width: 1024px) {
+		@media only screen and (max-width: 1023px) {
 		flex-direction: column;
 		align-items: start;
 		gap: 12px;
+		}
+
+		@media only screen and (max-width: 767px) {
+		gap: 10px;
 		}
 
 		p {
