--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,20 +1,20 @@
 @font-face {
   font-family: 'Helvetica';
-  src: url('../assets/fonts/Helvetica-Bold.ttf') format('woff2');
+  src: url('../assets/fonts/Helvetica-Bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'TT Hoves Pro Trl Expanded';
-  src: url('../assets/fonts/TT\ Hoves\ Pro\ Trial\ Expanded\ Light.ttf') format('woff2');
+  src: url('../assets/fonts/TT\ Hoves\ Pro\ Trial\ Expanded\ Light.ttf') format('truetype');
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'TT Hoves Pro Trl Expanded';
-  src: url('../assets/fonts/TT\ Hoves\ Pro\ Trial\ Expanded\ Medium.ttf') format('woff2');
+  src: url('../assets/fonts/TT\ Hoves\ Pro\ Trial\ Expanded\ Medium.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
 }
