--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -7,14 +7,14 @@
 
 @font-face {
   font-family: 'TT Hoves Pro Trl Expanded';
-  src: url('../assets/fonts/TT\ Hoves\ Pro\ Trial\ Expanded\ Light.ttf') format('truetype');
+  src: url('../assets/fonts/TT-Hoves-Pro-Light.ttf') format('truetype');
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'TT Hoves Pro Trl Expanded';
-  src: url('../assets/fonts/TT\ Hoves\ Pro\ Trial\ Expanded\ Medium.ttf') format('truetype');
+  src: url('../assets/fonts/TT-Hoves-Pro-Medium.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
 }
